[package]
name = "hail"
version = "0.1.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
description = "HTTP load testing tool powered by Rust and Tokio"
license = "MIT"

[dependencies]
clap = "2.29"
futures = "0.1"
hyper = "0.11.9"
hyper-tls = "0.1.2"
tokio-core = "0.1"
openssl-probe = "0.1.2"
